# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint_project.yml
brain_games/: cli.py  even_lib.py  game_engine.py  mathlib.py  settings.py
brain_games/gamelibs/: even.py  gcd.py  prime.py  progression.py
brain_games/games/: calc.py  gcd.py  prime.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
