[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet Project 'Brain Games'"
authors = ["paalso <40a.pvl@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
